// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saga behavior SUBMIT_USER_ACCOUNT_INFO_FAILURE should display error message with action data 1`] = `
<span>
  There was a problem updating your account information.
  <br />
  <span
    key="Error 1"
  >
    Error 1
    <br />
  </span>
  <span
    key="Error 2"
  >
    Error 2
    <br />
  </span>
</span>
`;

exports[`saga behavior SUBMIT_USER_CHANGE_PASSWORD_FAILURE should display error message with action data 1`] = `
<span>
  There was a problem updating your password.
  <br />
  <span
    key="Error 1"
  >
    Error 1
    <br />
  </span>
  <span
    key="Error 2"
  >
    Error 2
    <br />
  </span>
</span>
`;
